force-app/main/default/objects/Sales_Order__c/fields/BOM__c.field-meta.xml
<CustomField>
    <fullName>BOM__c</fullName>
    <label>BOM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>