force-app/main/default/objects/Sales_Order__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter</fullName>
            </value>
            <value>
                <fullName>Starter SH</fullName>
            </value>
            <value>
                <fullName>MERGE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>MYCRO</fullName>
            </value>
            <value>
                <fullName>SENSE (S)</fullName>
            </value>
            <value>
                <fullName>SENSE</fullName>
            </value>
            <value>
                <fullName>TOUCH</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Warranty - deferred</fullName>
            </value>
            <value>
                <fullName>ICP</fullName>
            </value>
            <value>
                <fullName>Engineering Services</fullName>
            </value>
            <value>
                <fullName>T&amp;A</fullName>
            </value>
            <value>
                <fullName>SDK</fullName>
            </value>
            <value>
                <fullName>SDK - C</fullName>
            </value>
            <value>
                <fullName>SDK2 - C</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
            <value>
                <fullName>MYCRO - C</fullName>
            </value>
            <value>
                <fullName>SENSE - C</fullName>
            </value>
            <value>
                <fullName>TOUCH - C</fullName>
            </value>
            <value>
                <fullName>Other - C</fullName>
            </value>
            <value>
                <fullName>H1</fullName>
            </value>
            <value>
                <fullName>BioAPI SDK</fullName>
            </value>
            <value>
                <fullName>UBRs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>