force-app/main/default/objects/Sales_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>