force-app/main/default/objects/Sales_Order__c/fields/Days_Committed__c.field-meta.xml
<CustomField>
    <fullName>Days_Committed__c</fullName>
    <formula>Expected_Ship_Date__c - Payment_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expected_Ship_Date__c - Payment_Received__c</inlineHelpText>
    <label>Days Committed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>