force-app/main/default/objects/Sales_Order__c/fields/Delivery__c.field-meta.xml
<CustomField>
    <fullName>Delivery__c</fullName>
    <formula>Invoice_Date__c - Payment_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice_Date__c - Payment_Received__c</inlineHelpText>
    <label>Delivery</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>