force-app/main/default/objects/Sales_Order__c/fields/DSO_AR__c.field-meta.xml
<CustomField>
    <fullName>DSO_AR__c</fullName>
    <formula>Payment_Received__c - Invoice_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment_Received__c - Invoice_Date__c</inlineHelpText>
    <label>DSO AR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>