force-app/main/default/objects/Sales_Order__c/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <formula>CASE( 
  MOD( Order_Released_Date__c - DATE( 1900, 1, 7 ), 7 ),
  2, Order_Released_Date__c + 2 + 5,
  3, Order_Released_Date__c + 2 + 5,
  4, Order_Released_Date__c + 2 + 5,
  5, Order_Released_Date__c + 2 + 5,
  6, Order_Released_Date__c + 2 + 5,
  Order_Released_Date__c + 2 + 5
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>