force-app/main/default/objects/Sales_Order__c/fields/FX__c.field-meta.xml
<CustomField>
    <fullName>FX__c</fullName>
    <formula>IF(TEXT(Currency__c)=&quot;USD&quot;,1,IF(TEXT(Currency__c)=&quot;Rupee&quot;,0.01485,IF(TEXT(Currency__c)=&quot;CAD&quot;,0.7460,NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FX</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>