force-app/main/default/objects/Sales_Order__c/fields/Generated__c.field-meta.xml
<CustomField>
    <fullName>Generated__c</fullName>
    <label>Month Generated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan</fullName>
            </value>
            <value>
                <fullName>Feb</fullName>
            </value>
            <value>
                <fullName>Mar</fullName>
            </value>
            <value>
                <fullName>Apr</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>Jun</fullName>
            </value>
            <value>
                <fullName>Jul</fullName>
            </value>
            <value>
                <fullName>Aug</fullName>
            </value>
            <value>
                <fullName>Sep</fullName>
            </value>
            <value>
                <fullName>Oct</fullName>
            </value>
            <value>
                <fullName>Nov</fullName>
            </value>
            <value>
                <fullName>Dec</fullName>
            </value>
            <value>
                <fullName>Prior Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>