force-app/main/default/objects/Sales_Order__c/fields/GM__c.field-meta.xml
<CustomField>
    <fullName>GM__c</fullName>
    <formula>IF(Net_Margin__c=0,0,Net_Margin__c/Reporting__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GM %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>