force-app/main/default/objects/Sales_Order__c/fields/Instal__c.field-meta.xml
<CustomField>
    <fullName>Instal__c</fullName>
    <label>Instal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>