force-app/main/default/objects/Sales_Order__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Invoice #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>