force-app/main/default/objects/Sales_Order__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise Access</fullName>
            </value>
            <value>
                <fullName>Smart Home</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>