force-app/main/default/objects/Sales_Order__c/fields/Native_Amount__c.field-meta.xml
<CustomField>
    <fullName>Native_Amount__c</fullName>
    <label>Native Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>