force-app/main/default/objects/Sales_Order__c/fields/Net_Margin__c.field-meta.xml
<CustomField>
    <fullName>Net_Margin__c</fullName>
    <formula>IF(TEXT(Status__c)=&quot;Shipped&quot;, Reporting__c - BOM__c - OH_Allocation__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Margin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>