force-app/main/default/objects/Sales_Order__c/fields/OA_Sent__c.field-meta.xml
<CustomField>
    <fullName>OA_Sent__c</fullName>
    <label>OA Sent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>