force-app/main/default/objects/Sales_Order__c/fields/OC_Sent__c.field-meta.xml
<CustomField>
    <fullName>OC_Sent__c</fullName>
    <label>OC Sent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>