force-app/main/default/objects/Sales_Order__c/fields/OH_Allocation__c.field-meta.xml
<CustomField>
    <fullName>OH_Allocation__c</fullName>
    <formula>IF(TEXT(Status__c) = &quot;Shipped&quot;,  Reporting__c  * 0.04,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OH Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>