force-app/main/default/objects/Sales_Order__c/fields/Order_Shipped_Year__c.field-meta.xml
<CustomField>
    <fullName>Order_Shipped_Year__c</fullName>
    <label>Order Shipped Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>