force-app/main/default/objects/Sales_Order__c/fields/OTD_reporting__c.field-meta.xml
<CustomField>
    <fullName>OTD_reporting__c</fullName>
    <formula>Days_Committed__c - Delivery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days_Committed__c - Delivery__c</inlineHelpText>
    <label>OTD reporting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>