force-app/main/default/objects/Sales_Order__c/fields/Pymt_Turnaround__c.field-meta.xml
<CustomField>
    <fullName>Pymt_Turnaround__c</fullName>
    <label>DSO Prepay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>