force-app/main/default/objects/Sales_Order__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <formula>IF(TEXT(Month__c) = &quot;Jan&quot;, &quot;Q1&quot;, 
IF(TEXT(Month__c) = &quot;Feb&quot;, &quot;Q1&quot;, 
IF(TEXT(Month__c) = &quot;Mar&quot;, &quot;Q1&quot;, 
IF(TEXT(Month__c) = &quot;Apr&quot;, &quot;Q2&quot;, 
IF(TEXT(Month__c) = &quot;May&quot;, &quot;Q2&quot;, 
IF(TEXT(Month__c) = &quot;Jun&quot;, &quot;Q2&quot;, 
IF(TEXT(Month__c) = &quot;Jul&quot;, &quot;Q3&quot;, 
IF(TEXT(Month__c) = &quot;Aug&quot;, &quot;Q3&quot;, 
IF(TEXT(Month__c) = &quot;Sep&quot;, &quot;Q3&quot;, 
IF(TEXT(Month__c) = &quot;Oct&quot;, &quot;Q4&quot;, 
IF(TEXT(Month__c) = &quot;Nov&quot;, &quot;Q4&quot;, 
IF(TEXT(Month__c) = &quot;Dec&quot;, &quot;Q4&quot;, &quot;&quot;))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter Shipped</label>
    <type>Text</type>
</CustomField>