force-app/main/default/objects/Sales_Order__c/fields/Reporting__c.field-meta.xml
<CustomField>
    <fullName>Reporting__c</fullName>
    <formula>Native_Amount__c  *  FX__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>