force-app/main/default/objects/Sales_Order__c/fields/Sales_Reps__c.field-meta.xml
<CustomField>
    <fullName>Sales_Reps__c</fullName>
    <formula>IF(TEXT(Region__c) = &quot;Europe&quot;, &quot;Neil Rowlands&quot;,
IF(TEXT(Region__c) = &quot;ME&quot;, &quot;Neil Rowlands&quot;,
IF(TEXT(Region__c) = &quot;Africa&quot;, &quot;Neil Rowlands&quot;,
IF(TEXT(Region__c) = &quot;Europe SH&quot;, &quot;Neil Rowlands&quot;,
IF(TEXT(Region__c) = &quot;ME SH&quot;, &quot;Neil Rowlands&quot;,
IF(TEXT(Region__c) = &quot;Africa SH&quot;, &quot;Neil Rowlands&quot;,
IF(TEXT(Region__c) = &quot;India&quot;, &quot;Behram Cooper&quot;,
IF(TEXT(Region__c) = &quot;India SH&quot;, &quot;Neil Rowlands&quot;,
IF(TEXT(Region__c) = &quot;Asia&quot;, &quot;Behram Cooper&quot;,
IF(TEXT(Region__c) = &quot;Asia SH&quot;, &quot;Neil Rowlands&quot;,
IF(TEXT(Region__c) = &quot;NA&quot;, &quot;James Nunn&quot;,
IF(TEXT(Region__c) = &quot;House&quot;, &quot;House&quot;,
IF(TEXT(Region__c) = &quot;UAE&quot;, &quot;Neil Rowlands&quot;,
IF(TEXT(Region__c) = &quot;Intercompany&quot;, &quot;Intercompany&quot;,
IF(TEXT(Region__c) = &quot;UAE SH&quot;, &quot;Tushar Nair&quot;,
IF(TEXT(Region__c) = &quot;South Asia&quot;, &quot;KJ Ananda&quot;,
IF(TEXT(Region__c) = &quot;Mara&quot;, &quot;None&quot;, &quot;&quot;)))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Reps</label>
    <type>Text</type>
</CustomField>