force-app/main/default/objects/Sales_Order__c/fields/Ship_Date_Revised__c.field-meta.xml
<CustomField>
    <fullName>Ship_Date_Revised__c</fullName>
    <label>Ship Date Revised</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>