force-app/main/default/objects/Sales_Order__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <label>Ship To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Europe SH</fullName>
            </value>
            <value>
                <fullName>ME SH</fullName>
            </value>
            <value>
                <fullName>Africa SH</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>India SH</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Asia SH</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>UAE</fullName>
            </value>
            <value>
                <fullName>UAE SH</fullName>
            </value>
            <value>
                <fullName>Mara</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>