force-app/main/default/objects/Sales_Order__c/fields/Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Sr_No__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Sr No.</label>
    <type>AutoNumber</type>
</CustomField>