force-app/main/default/objects/Sales_Order__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <label>Tracking #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>