force-app/main/default/objects/Sales_Order__c/fields/Type_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Account__c</fullName>
    <label>Type of Account</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bluebird</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>KeyAccount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>