force-app/main/default/objects/Sales_Order__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smart Home</fullName>
            </value>
            <value>
                <fullName>Residential EA</fullName>
            </value>
            <value>
                <fullName>Corporate EA</fullName>
            </value>
            <value>
                <fullName>Seeding Units</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>