force-app/main/default/objects/Sales_Order__c/fields/X100K__c.field-meta.xml
<CustomField>
    <fullName>X100K__c</fullName>
    <formula>IF(Reporting__c &gt; 100000,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&gt; $100K</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>