force-app/main/default/objects/Sales_Order__c/fields/X10K_25K__c.field-meta.xml
<CustomField>
    <fullName>X10K_25K__c</fullName>
    <formula>IF(AND(Reporting__c&gt;10000,Reporting__c&lt;=25000),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$10K - $25K</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>