force-app/main/default/objects/Sales_Order__c/fields/X10K__c.field-meta.xml
<CustomField>
    <fullName>X10K__c</fullName>
    <formula>IF(Reporting__c &lt;= 10000,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&lt; $10K</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>