force-app/main/default/objects/Sales_Order__c/fields/X24hrs_Target__c.field-meta.xml
<CustomField>
    <fullName>X24hrs_Target__c</fullName>
    <label>24hrs Target</label>
    <length>20</length>
    <type>Text</type>
</CustomField>