force-app/main/default/objects/Sales_Order__c/fields/X25K_50K__c.field-meta.xml
<CustomField>
    <fullName>X25K_50K__c</fullName>
    <formula>IF(AND(Reporting__c&gt;25000,Reporting__c&lt;=50000),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$25K - $50K</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>