force-app/main/default/objects/Sales_Order__c/fields/X48_hrs_Target__c.field-meta.xml
<CustomField>
    <fullName>X48_hrs_Target__c</fullName>
    <label>48 hrs Target</label>
    <length>20</length>
    <type>Text</type>
</CustomField>