force-app/main/default/objects/Sales_Order__c/fields/X50K_75K__c.field-meta.xml
<CustomField>
    <fullName>X50K_75K__c</fullName>
    <formula>IF(AND(Reporting__c&gt;50000,Reporting__c&lt;=75000),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$50K - $75K</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>